--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
       </div>
 
       <div class="subsection profile">
+        <img src="img/personal/anton_erlandsson.jpg" class="img-circle profile"><br>
+        <p class="profile">
+          <b class="profile">Anton Erlandsson</b><br>
+          <i class="profile">Montör</i>
+        </p>
+      </div>
+
+      <div class="subsection profile">
         <img src="img/personal/anna_maj_persson.jpg" class="img-circle profile">
         <p class="profile">
           <b class="profile">Anna Maj Persson</b><br>
