--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
         </p>
       </div>
 
+        <div class="subsection profile">
+        <img src="img/personal/jani_palmroos.jpg" class="img-circle profile">
+        <p class="profile">
+          <b class="profile">Jani Palmroos</b><br>
+          <i class="profile">Serviceansvarig</i>
+            <p>
+          <a href="mailto:jani.palmroos@newmansvvs.se">jani.palmroos@newmansvvs.se</a><br>
+          <a href="tel:0709446204">0709446204</a>
+          </p>
+        </p>
+      </div>
+  
       <div class="subsection profile">
         <img src="img/personal/niklas_tano.jpg" class="img-circle profile"><br>
         <p class="profile">
@@ -175,10 +187,24 @@
       </div>
 
       <div class="subsection profile">
-        <img src="img/personal/anton_erlandsson.jpg" class="img-circle profile"><br>
+        <img src="img/personal/henrik.jpg" class="img-circle profile"><br>
         <p class="profile">
-          <b class="profile">Anton Erlandsson</b><br>
+          <b class="profile">Henrik</b><br>
           <i class="profile">Montör</i>
+           <p>
+           <a href="tel:0733922427">0733922427</a>
+           </p>
+        </p>
+      </div>
+
+      <div class="subsection profile">
+        <img src="img/personal/adam.jpg" class="img-circle profile"><br>
+        <p class="profile">
+          <b class="profile">Adam</b><br>
+          <i class="profile">Montör</i>
+           <p>
+           <a href="tel:0768702739">0768702739</a>
+           </p>
         </p>
       </div>
 
