--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <div class="subsection profile">
         <img src="img/personal/henrik.jpg" class="img-circle profile"><br>
         <p class="profile">
-          <b class="profile">Henrik</b><br>
+          <b class="profile">Henric Gunnarsson</b><br>
           <i class="profile">Montör</i>
            <p>
            <a href="tel:0733922427">0733922427</a>
@@ -200,7 +200,7 @@
       <div class="subsection profile">
         <img src="img/personal/adam.jpg" class="img-circle profile"><br>
         <p class="profile">
-          <b class="profile">Adam</b><br>
+          <b class="profile">Adam Petersson</b><br>
           <i class="profile">Montör</i>
            <p>
            <a href="tel:0768702739">0768702739</a>
