--- a/index.html
+++ b/index.html
@@ -241,9 +241,7 @@
 
     <footer>
       <div class="subsection moraen">
-        <! --
-        <a href="http://moraen.se" target="_blank"><img class="moraen" src="img/moraen_logo_grunge.png" alt="Design av Morän"></a>
-        -->
+        <img class="moraen" src="img/moraen_logo_grunge.png" alt="Design av Morän">
       </div>
     </footer>
 
